--- a/index.html
+++ b/index.html
@@ -13,42 +13,39 @@
 	</head>
 	<body>
 		<div class="cards-container">
-		<div class="card sedan">
-			<img src="./images/icon-sedans.svg" alt="">
-			<h2>Sedans</h2>
-			<p>
-				Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-				or on your next road trip.
-			</p>
-			<button>Learn MOre</button>
-		</div>
-		<div class="card suv">
-			<img src="./images/icon-suvs.svg" alt="">
-			<h2>SUVs</h2>
-			<p>
-				Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-				and off-road adventures.
-			</p>
-			<button>Learn MOre</button>
+			<div class="card sedan">
+				<img src="./images/icon-sedans.svg" alt="">
+				<h2>Sedans</h2>
+				<p>
+					Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+					or on your next road trip.
+				</p>
+				<button>Learn More</button>
 			</div>
-		<div class="card luxury">
-			<img src="./images/icon-luxury.svg" alt="">
-			<h2>Luxury</h2>
-			<p>
+			<div class="card suv">
+				<img src="./images/icon-suvs.svg" alt="">
+				<h2>SUVs</h2>
+				<p>
+					Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+					and off-road adventures.
+				</p>
+				<button>Learn More</button>
+				</div>
+			<div class="card luxury">
+				<img src="./images/icon-luxury.svg" alt="">
+				<h2>Luxury</h2>
+				<p>
 					Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+					rental and arrive in style.
+				</p>
+				<button>Learn More</button>
+			</div>
+		</div>
+		<div class="attribution">
+			<p>
+				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
+				Coded by <a href="https://luyanda-portfolio.netlify.app/" target="_blank">Luyanda Dingindlela.</a>
 			</p>
-			<button>Learn MOre</button>
 		</div>
-		</div>
-
-
-
-
-
-
-		<!-- <div class="attribution">
-		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-		Coded by <a href="#">Your Name Here</a>.
-		</div> -->
 	</body>
 </html>
